--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
 	<meta charset="utf-8" />
 	<title>Project 2</title>
 	<link href="styles/default-styles.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+
 	<script src="./src/loader.js" type="module"></script>
 </head>
 <body>
 <main>
-    <div id = "output">
-  Press a key to see its code
- </div>
+    <div id = "heading">
+        <h1>Note Visualizer</h1>
+        <p>Here's some placeholder text on how to use this app.</p>
+        <div id = "output">
+          Press a key to see its code
+        </div>
+    </div>
 	<canvas width="800" height="400"></canvas>
     
-<!--
 	<div id="controls">
 		<section>
-			<button id="playButton" data-playing="no"></button>
+<!--			<button id="playButton" data-playing="no"></button>-->
 			<button id="fsButton">Full Screen</button>
 		
+<!--
 			<label>Track: 
 				<select id="trackSelect">
 					<option value="media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
@@ -26,12 +32,14 @@
 					<option value="media/The Picard Song.mp3">The Picard Song</option>
 				</select>
 			</label>
+-->
 		</section>
 		
 		<section>
 			Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
 			<span id="volumeLabel">???</span>
 		</section>
+<!--
         
         <section>
   <span><input type="checkbox" id="gradientCB" checked><label for="gradientCB">Show Gradient</label></span>
@@ -42,8 +50,8 @@
   <span><input type="checkbox" id="embossCB" ><label for="embossCB">Show Emboss</label></span>
   <span><input type="checkbox" id="invertCB" ><label for="invertCB">Invert Colors</label></span>
 </section>
-	</div>
 -->
+	</div>
 </main>
 </body>
 </html>
