--- a/index.html
+++ b/index.html
@@ -39,18 +39,15 @@
 			Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
 			<span id="volumeLabel">???</span>
 		</section>
-<!--
+
         
         <section>
   <span><input type="checkbox" id="gradientCB" checked><label for="gradientCB">Show Gradient</label></span>
   <span><input type="checkbox" id="barsCB" checked><label for="barsCB">Show Bars</label></span>
-  <span><input type="checkbox" id="circlesCB" checked><label for="circlesCB">Show Circles</label></span>
-   we'll use this 4th checkbox soon! 
-  <span><input type="checkbox" id="noiseCB" checked><label for="noiseCB">Show Noise</label></span>
-  <span><input type="checkbox" id="embossCB" ><label for="embossCB">Show Emboss</label></span>
-  <span><input type="checkbox" id="invertCB" ><label for="invertCB">Invert Colors</label></span>
+  <span><input type="checkbox" id="circlesCB" checked><label for="circlesCB">Show Waves</label></span>
+
 </section>
--->
+
 	</div>
 </main>
 </body>
