grayscale and radio buttons

--- a/index.html
+++ b/index.html
@@ -42,11 +42,23 @@
 
         
         <section>
-  <span><input type="checkbox" id="gradientCB" checked><label for="gradientCB">Show Gradient</label></span>
-  <span><input type="checkbox" id="barsCB" checked><label for="barsCB">Show Bars</label></span>
-  <span><input type="checkbox" id="circlesCB" checked><label for="circlesCB">Show Waves</label></span>
+            <span><input type="checkbox" id="gradientCB" checked><label for="gradientCB">Show Gradient</label></span>
+            <span><input type="checkbox" id="barsCB" checked><label for="barsCB">Show Bars</label></span>
+            <span><input type="checkbox" id="circlesCB" checked><label for="circlesCB">Show Waves</label></span>
 
-</section>
+        </section>
+        <section>
+            <label>Filters</label>
+            <br>
+            <input type="radio" id="none" name="filter" value="none">
+            <label for="none">None</label><br>
+             <input type="radio" id="grayscale" name="filter" value="grayscale">
+            <label for="grayscale">Grayscale</label><br>
+            <input type="radio" id="female" name="filter" value="female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="filter" value="other">
+            <label for="other">Other</label> 
+        </section>
 
 	</div>
 </main>
