A good point to stop for now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <header>
     <div id = "heading">
         <h1>Note Visualizer</h1>
-        <p>Here's some placeholder text on how to use this app.</p>
+        <br>
+        <p>Press on any letter key to play a note</p>
+        <p>Alternatively, use the track select and the play button to play a song.</p>
+        <p>The controls on the left can change the appearance of the visualizer. Enjoy!</p>
     </div>
 </header>
 
@@ -32,9 +35,9 @@
 	<div id="controls">
 		
 		<section id="sliders">
-            <br>
-			Slider 2: <input type="range" id="slider2" min="0" max="2" value="1" step="0.01">
-			<span id="slider2Label">???</span>
+
+			Pan: <input type="range" id="panSlider" min="-2" max="2" value="0" step="0.01">
+			<span id="panLabel">???</span>
             <br>
 			Slider 3: <input type="range" id="slider3" min="0" max="2" value="1" step="0.01">
 			<span id="slider3Label">???</span>
